--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+/*for the glitch effet*/
+
+@keyframes glitch {
+    0% {
+      clip-path: inset(40% 0 61% 0);
+      transform: translate(-20px, -10px);
+    }
+    20% {
+      clip-path: inset(92% 0 1% 0);
+      transform: translate(20px, 10px);
+    }
+    40% {
+      clip-path: inset(43% 0 1% 0);
+      transform: translate(-20px, 10px);
+    }
+    60% {
+      clip-path: inset(25% 0 58% 0);
+      transform: translate(20px, -10px);
+    }
+    80% {
+      clip-path: inset(54% 0 7% 0);
+      transform: translate(-20px, 10px);
+    }
+    100% {
+      clip-path: inset(58% 0 43% 0);
+      transform: translate(20px, -10px);
+    }
+  }
+  
+  @keyframes gradient-x {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+  
+  .animate-glitch {
+    animation: glitch 500ms steps(2, end) forwards;
+  }
+  
+  .animate-gradient-x {
+    animation: gradient-x 2s linear infinite;
+  }
+  
+  /* Dark theme for date input */
+  [color-scheme="dark"] {
+    background-color: black;
+    color: #22c55e;
+    border-color: rgba(34, 197, 94, 0.3);
+  }
+
+  /*....................................*/
+
+  .success-message {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #0A0E17;
+    color: #bddbc4;
+    border: 1px solid #0A0E17;
+    border-radius: 5px;
+    text-align: center;
+  }
